# VideoExtractor

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: copies.py  tasks.py  transcripts.py  videos.py
backend/app/core/: config.py  exceptions.py
backend/app/db/: session.py
backend/app/models/: __init__.py  copy.py  export.py  task.py  transcript.py  video.py
backend/app/schemas/: task.py  video.py
backend/app/services/: copy_generator.py  downloader.py  llm_service.py  transcription.py
backend/app/storage/: path_manager.py
backend/app/tasks/: video_pipeline.py
backend/tests/: test_downloader_import.py  test_platform_resolver.py
docs/: architecture.md
frontend/: .env.example  .env.local  package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/tasks/[id]/: page.tsx
frontend/components/: CopyPanel.tsx  StatusBadge.tsx  TaskForm.tsx  TaskList.tsx  TranscriptPanel.tsx  VideoInfo.tsx
frontend/lib/: api.ts  types.ts
storage/: www.douyin.com_cookies.txt
